# WYG_Architect

./: README.md  git_sync.sh  run_te.py  wyg_brain.db
.codebuddy/commands/: wyg.md
.codebuddy/rules/: ba.mdc  cr.mdc  dev.mdc  pm.mdc  rr.mdc  sa.mdc  te.mdc  wyg-architect.mdc
.codebuddy/skills/wyg/: SKILL.md
mcp-chinese-dict/: pyproject.toml  server.py  te_acceptance.py  te_acceptance_result.txt  test_dict.py  test_result.txt
mcp-chinese-dict/data/: word.json
mcp-chinese-dict/loaders/: cilin_loader.py
mcp-chinese-dict/tools/: dict_tools.py
openspec/changes/wyg-architect-system/: design.md  proposal.md  tasks.md
openspec/changes/wyg-command/: design.md  proposal.md  tasks.md
openspec/specs/file-map/: spec.md
openspec/specs/knowledge-base/: spec.md
openspec/specs/knowledge-map/: spec.md
wyg-brain/: .gitignore  README.md  main.py
wyg-brain/backend/: .env.example  requirements.txt  start.bat
wyg-brain/backend/app/: main.py
wyg-brain/frontend/: app.js  index.html  style.css
wyg-space/: wyg-architect.md
wyg-space/file-map/: index.yaml
wyg-space/knowledge-map/: index.yaml
wyg-space/knowledge-map/schemas/: node-schema.yaml  relation-schema.yaml  relation-types.yaml
wyg-space/knowledge/ba/: requirements-analysis.md
wyg-space/knowledge/cr/: review-checklist.md
wyg-space/knowledge/dev/: coding-standards.md
wyg-space/knowledge/pm/: project-management.md
wyg-space/knowledge/rr/: readiness-criteria.md
wyg-space/memory/: ba-memory.yaml  cr-memory.yaml  dev-memory.yaml  pm-memory.yaml  rr-memory.yaml  sa-memory.yaml  te-memory.yaml
(+40 files in other folders)
